@@ -5418,6 +5418,7 @@ typedef struct {
 
     int nobjs;  /* number of objects */
     int *pos; /* object positions */
+    int max_nobjs; /* current allocation size */
     int *pageobj; /* page object numbers */
     int pagemax;
     int startstream; /* position of start of current stream */
@@ -5444,8 +5445,8 @@ typedef struct {
 
     /* Raster images used on the device */
     rasterImage *rasters;
-    int numRasters;
-    int maxRasters;
+    int numRasters; /* number in use */
+    int maxRasters; /* size of array allocated */
     /* Soft masks for raster images */
     int *masks;
     int numMasks;
@@ -5797,7 +5798,7 @@ PDFDeviceDriver(pDevDesc dd, const char *file, const char *paper,
 		const char *title, SEXP fonts,
 		int versionMajor, int versionMinor,
 		const char *colormodel, int dingbats, int useKern,
-		Rboolean fillOddEven, int maxRasters, Rboolean useCompression)
+		Rboolean fillOddEven, Rboolean useCompression)
 {
     /* If we need to bail out with some sort of "error" */
     /* then we must free(dd) */
@@ -5831,22 +5832,25 @@ PDFDeviceDriver(pDevDesc dd, const char *file, const char *paper,
     pd->versionMajor = versionMajor;
     pd->versionMinor = versionMinor;
 
-    /* FIXME: pos is allocated of a static size that is never checked
-       as objects are added. This can lead to buffer overflows (and
-       has in the past when it was independent of maxRasters). */
-    pd->pos = (int *) calloc(1150 + maxRasters * 2, sizeof(int));
+    /* This is checked at the start of every page.  We typically have
+       three objects per page plus one or two for each raster image, 
+       so this is an ample initial allocation.
+     */
+    pd->max_nobjs = 2000;
+    pd->pos = (int *) calloc(pd->max_nobjs, sizeof(int));
     if(!pd->pos) {
 	PDFcleanup(1, pd);
 	free(dd);
-	error(_("cannot allocate pd->pos"));
+	error("cannot allocate pd->pos");
     }
-    pd->pageobj = (int *) calloc(100, sizeof(int));
+    /* This one is dynamic: initial allocation */
+    pd->pagemax = 100;
+    pd->pageobj = (int *) calloc(pd->pagemax, sizeof(int));
     if(!pd->pageobj) {
 	PDFcleanup(2, pd);
 	free(dd);
-	error(_("cannot allocate pd->pageobj"));
+	error("cannot allocate pd->pageobj");
     }
-    pd->pagemax = 100;
 
 
     /* initialize PDF device description */
@@ -5963,7 +5967,7 @@ PDFDeviceDriver(pDevDesc dd, const char *file, const char *paper,
      */
     if (!isNull(fonts)) {
 	int i, dontcare, gotFonts = 0, nfonts = LENGTH(fonts);
-	for (i=0; i<nfonts; i++) {
+	for (i = 0; i < nfonts; i++) {
 	    int index, cidindex;
 	    const char *name = CHAR(STRING_ELT(fonts, i));
 	    if (findDeviceFont(name, pd->fonts, &index) ||
@@ -6016,7 +6020,7 @@ PDFDeviceDriver(pDevDesc dd, const char *file, const char *paper,
      *****************************/
 
     pd->numRasters = 0;
-    pd->maxRasters = maxRasters;
+    pd->maxRasters = 64; /* dynamic */
     pd->rasters = initRasterArray(pd->maxRasters);
     if (!pd->rasters) {
 	PDFcleanup(4, pd);
@@ -6761,6 +6765,15 @@ static void PDF_endfile(PDFDesc *pd)
     	fprintf(pd->pdffp, ">>\nendobj\n");
     }
 
+    if(tempnobj >= pd->max_nobjs) {
+	int new = tempnobj + 500;
+	void *tmp = realloc(pd->pos, new * sizeof(int));
+	if(!pd->pos || !pd->pageobj)
+	    error("unable to increase object limit: please shutdown the pdf device");
+	pd->pos = (int *) tmp;
+	pd->max_nobjs = new;
+    }
+
     /*
      * Write out objects representing the encodings
      */
@@ -7073,14 +7086,20 @@ static void PDF_NewPage(const pGEcontext gc,
     PDFDesc *pd = (PDFDesc *) dd->deviceSpecific;
     char buf[512];
 
-    if(pd->pageno >= pd->pagemax || pd->nobjs >= 3*pd->pagemax) {
-	pd->pageobj = (int *)
-	    realloc(pd->pageobj, 2*pd->pagemax * sizeof(int));
-	pd->pos = (int *) realloc(pd->pos,
-				  (6*pd->pagemax + 550) * sizeof(int));
-	if(!pd->pos || !pd->pageobj)
-	    error(_("unable to increase page limit: please shutdown the pdf device"));
+    if(pd->pageno >= pd->pagemax) {
+	void * tmp = realloc(pd->pageobj, 2*pd->pagemax * sizeof(int));
+	if(!pd->pageobj)
+	    error("unable to increase page limit: please shutdown the pdf device");
+	pd->pageobj = (int *) tmp;
 	pd->pagemax *= 2;
+    }
+    if(pd->nobjs + 500 >= pd->max_nobjs) {
+	int new = pd->max_nobjs + 2000;
+	void *tmp = realloc(pd->pos, new * sizeof(int));
+	if(!pd->pos || !pd->pageobj)
+	    error("unable to increase object limit: please shutdown the pdf device");
+	pd->pos = (int *) tmp;
+	pd->max_nobjs = new;
     }
 
 
@@ -8229,8 +8248,7 @@ SEXP PDF(SEXP args)
 	*bg, *fg, *title, call[] = "PDF", *colormodel;
     const char *afms[5];
     double height, width, ps;
-    int i, onefile, pagecentre, major, minor, dingbats, useKern, 
-	maxRasters, useCompression;
+    int i, onefile, pagecentre, major, minor, dingbats, useKern, useCompression;
     SEXP fam, fonts;
     Rboolean fillOddEven;
 
@@ -8269,9 +8287,6 @@ SEXP PDF(SEXP args)
     fillOddEven = asLogical(CAR(args)); args = CDR(args);
     if (fillOddEven == NA_LOGICAL)
 	error(_("invalid value of '%s'"), "fillOddEven");
-    maxRasters = asInteger(CAR(args)); args = CDR(args);
-    if (maxRasters == NA_INTEGER || maxRasters <= 0)
-	error(_("invalid 'maxRasters' parameter in %s"), call);
     useCompression = asLogical(CAR(args)); args = CDR(args);
     if (useCompression == NA_LOGICAL)
 	error(_("invalid value of '%s'"), "useCompression");
@@ -8285,7 +8300,7 @@ SEXP PDF(SEXP args)
 	if(!PDFDeviceDriver(dev, file, paper, family, afms, encoding, bg, fg,
 			    width, height, ps, onefile, pagecentre,
 			    title, fonts, major, minor, colormodel,
-			    dingbats, useKern, fillOddEven, maxRasters,
+			    dingbats, useKern, fillOddEven,
 			    useCompression)) {
 	    /* we no longer get here: error is thrown in PDFDeviceDriver */
 	    error(_("unable to start %s() device"), "pdf");
